--- a/backend/package.json
+++ b/backend/package.json
@@ -1,25 +1,33 @@
 {
-  "name": "fullstack-app-backend",
+  "name": "repo-ranger-backend",
   "version": "1.0.0",
-  "description": "Backend for the fullstack application using TypeScript and Express.",
+  "description": "Backend for Repo Ranger application.",
   "main": "src/app.ts",
   "scripts": {
     "start": "ts-node src/app.ts",
     "build": "tsc",
-    "dev": "ts-node-dev src/app.ts"
+    "dev": "ts-node-dev src/app.ts",
+    "test": "jest"
   },
   "dependencies": {
+    "amqplib": "^0.8.0",
+    "body-parser": "^1.19.0",
+    "dotenv": "^16.5.0",
     "express": "^4.17.1",
-    "mariadb": "^2.5.5",
-    "amqplib": "^0.8.0"
+    "mariadb": "^2.5.6",
+    "sequelize": "^6.37.7"
   },
   "devDependencies": {
-    "typescript": "^4.5.4",
-    "ts-node": "^10.4.0",
-    "ts-node-dev": "^1.1.8",
-    "@types/express": "^4.17.13",
-    "@types/node": "^16.11.7"
+    "@types/amqplib": "^0.10.7",
+    "@types/express": "^4.17.21",
+    "@types/jest": "^27.0.2",
+    "@types/node": "^20.17.50",
+    "@types/sequelize": "^4.28.20",
+    "jest": "^27.0.6",
+    "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.4.0"
   },
-  "author": "Your Name",
+  "author": "Yuri Morales",
   "license": "MIT"
 }
