Ajuste README, conexao com o rabbitmq e toast de mensagem no frontend

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,7 +42,14 @@ services:
       - "3306:3306"
 
   rabbitmq:
-    image: rabbitmq:management
+    image: rabbitmq:3-management
+    hostname: rabbitmq
+    container_name: rabbitmq
+    restart: always
     ports:
       - "5672:5672"
       - "15672:15672"
+    environment:
+      RABBITMQ_DEFAULT_USER: guest
+      RABBITMQ_DEFAULT_PASS: guest
+      RABBITMQ_FRAME_MAX: 131072
