--- a/backend/package.json
+++ b/backend/package.json
@@ -12,15 +12,20 @@
   "dependencies": {
     "amqplib": "^0.8.0",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "csv-parse": "^5.6.0",
     "dotenv": "^16.5.0",
     "express": "^4.17.1",
     "mariadb": "^2.5.6",
+    "multer": "^2.0.0",
     "sequelize": "^6.37.7"
   },
   "devDependencies": {
     "@types/amqplib": "^0.10.7",
+    "@types/cors": "^2.8.18",
     "@types/express": "^4.17.21",
     "@types/jest": "^27.0.2",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.17.50",
     "@types/sequelize": "^4.28.20",
     "jest": "^27.0.6",
